--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "chat_application",
-  "displayName": "chat_application"
+  "name": "vartalap_app",
+  "displayName": "vartalap_app"
 }
